created full contacts management; created a modal system for showing several prompts with animations; added global shortcut for deleting user account

--- a/src/app/components/contacts/contacts.component.scss
+++ b/src/app/components/contacts/contacts.component.scss
@@ -1,3 +1,5 @@
+@import '../../../util';
+
 :host {
   display: flex;
   flex-direction: column;
@@ -5,4 +7,12 @@
   width: 100%;
   flex-shrink: 1;
   flex-grow: 1;
+  align-items: center;
+  overflow-y: auto;
+  app-person:not(:first-child) {
+    margin-top: rem(20px);
+  }
+  ::-webkit-scrollbar {
+    width: 0;
+  }
 }
