--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,21 @@ html, body {
   box-sizing: border-box;
 }
 
+h3 {
+  font-size: rem(24px);
+  margin-top: 0;
+  margin-bottom: rem(10px);
+}
+
+hr {
+  width: 100%;
+  height: rem(1px);
+  border: none;
+  background-color: color('gray-dark');
+  margin-top: 0;
+  margin-bottom: rem(20px);
+}
+
 .color-accent {
   color: color('blue-light');
   fill: color('blue-light');
@@ -32,6 +47,7 @@ input[type="text"],
 input[type="email"],
 input[type="password"] {
   height: rem(35px);
+  width: 100%;
   border-radius: rem(3px);
   color: color('gray-lightest');
   font: inherit;
