finished invitations; contacts are now read in realtime; status indicator is now functional; session document will now be read in realtime; current user is shown on the bottom of the list; some minor changes and optimizations

--- a/src/app/components/left-pane/left-pane.component.html
+++ b/src/app/components/left-pane/left-pane.component.html
@@ -1,2 +1,2 @@
 <app-contacts></app-contacts>
-<app-controls show-logout (onlogout)="onLogout()"></app-controls>
+<app-controls [show-leave]="showLeave" (onleave)="onLeave()" show-logout (onlogout)="onLogout()"></app-controls>
