--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,2 +1,7 @@
-<app-person add-button (onselect)="onAddContact()"></app-person>
-<app-person *ngFor="let contact of contacts" [user]="contact" (onselect)="onInviteContact(contact)" (ondelete)="onDeleteContact(contact)"></app-person>
+<ng-template [ngIf]="! session || ! session.started">
+  <app-person add-button (onselect)="onAddContact()"></app-person>
+  <app-person *ngFor="let contact of contacts" [user]="contact" (onselect)="onInviteContact(contact)" (ondelete)="onDeleteContact(contact)"></app-person>
+</ng-template>
+<ng-template [ngIf]="session && session.started">
+  <app-person *ngFor="let member of members" [user]="member" session-member (onban)="onBan(member)"></app-person>
+</ng-template>
