session flow is properly managed up to the point where host and members get connected to each other; added webchimera.js prebuilts (broken on macos, pending update); many other minor improvements

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,3 @@
 <app-left-pane></app-left-pane>
-<app-source-select></app-source-select>
+<app-source-select *ngIf="! source || (joined && memberStatus !== 'ready')" (onsource)="onSourceSelected($event)"></app-source-select>
+<app-video-player *ngIf="!! source && (host || (joined && memberStatus === 'ready'))" [source]="source"></app-video-player>
