--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,7 +1,7 @@
-<ng-template [ngIf]="! session || ! session.started">
+<ng-template [ngIf]="! joined && (! session || ! session.started)">
   <app-person add-button selectable (onselect)="onAddContact()"></app-person>
-  <app-person *ngFor="let contact of contacts" [selectable]="!! session" [user]="contact" (onselect)="onInviteContact(contact)" (ondelete)="onDeleteContact(contact)"></app-person>
+  <app-person *ngFor="let contact of contacts" [session-member]="!! contact.status" [selectable]="!! session && ! contact.status" [user]="contact" (onselect)="onInviteContact(contact)" (ondelete)="onDeleteContact(contact)"></app-person>
 </ng-template>
-<ng-template [ngIf]="session && session.started">
+<ng-template [ngIf]="joined || (session && session.started)">
   <app-person *ngFor="let member of members" [user]="member" session-member (onban)="onBan(member)"></app-person>
 </ng-template>
