changed how cleanup is done (not longer on null auth); deleted accounts don't show up anymore in contacts; added easter egg for founder user; added secret notifications

--- a/src/app/components/notifications/notifications.component.scss
+++ b/src/app/components/notifications/notifications.component.scss
@@ -40,7 +40,15 @@
   &.success {
     border-color: color('green');
   }
+  &.secret {
+    border-color: color('magenta');
+  }
   &:not(:first-child) {
     margin-top: rem(10px);
+  }
+  svg.icon {
+    width: rem(20px);
+    margin-right: rem(10px);
+    fill: color('magenta');
   }
 }
