--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -45,8 +45,8 @@
     <ng-template [ngIf]="! loading">
       <div class="form-tabs-container">
         <div class="form-tabs">
-          <div class="form-tab selected" (click)="updateCursor($event, 'login')">Login</div>
-          <div class="form-tab" (click)="updateCursor($event, 'register')">Register</div>
+          <div class="form-tab" [ngClass]="{ selected: selectedTab === 'login' }" (click)="updateCursor($event, 'login')">Login</div>
+          <div class="form-tab" [ngClass]="{ selected: selectedTab === 'register' }" (click)="updateCursor($event, 'register')">Register</div>
         </div>
         <div class="form-tabs-line">
           <div class="form-tabs-line-cursor" [ngStyle]="{ width: cursorWidth + 'px', 'margin-left': cursorLeft + 'px' }"></div>
