--- a/src/app/components/source-select/source-select.component.html
+++ b/src/app/components/source-select/source-select.component.html
@@ -1,4 +1,4 @@
-<div class="source-option" (click)="onVideoSelect()">
+<div class="source-option" data-dropzone-reactive (click)="onVideoSelect()">
   <div class="option-icon">
     <svg xmlns="http://www.w3.org/2000/svg" width="75" height="100" viewBox="0 0 75 100">
       <path d="M75,23.817V25H50V0h1.183A4.688,4.688,0,0,1,54.5,1.373L73.627,20.5A4.689,4.689,0,0,1,75,23.817ZM43.75,26.563V0H4.688A4.687,4.687,0,0,0,0,4.688V95.313A4.687,4.687,0,0,0,4.688,100H70.313A4.687,4.687,0,0,0,75,95.313V31.25H48.438A4.7,4.7,0,0,1,43.75,26.563ZM62.5,54.691V76.558a4.69,4.69,0,0,1-8,3.315L43.75,69.129v7.433a4.687,4.687,0,0,1-4.687,4.688H17.188A4.687,4.687,0,0,1,12.5,76.563V54.688A4.687,4.687,0,0,1,17.188,50H39.063a4.687,4.687,0,0,1,4.688,4.688v7.433L54.5,51.376A4.691,4.691,0,0,1,62.5,54.691Z"/>
